--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/management.png" alt="">
+      <img class="masthead-avatar mb-5" src="logo.png" style="border-radius: 10%;" alt="">
+
+
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">PlanR</h1>
@@ -91,7 +93,7 @@
       <div class="row">
 
         <!-- Portfolio Item 1 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-4" style="padding:50px;">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -103,7 +105,7 @@
         </div>
 
         <!-- Portfolio Item 2 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-4" style="padding:50px;">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -115,7 +117,7 @@
         </div>
 
         <!-- Portfolio Item 3 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-4" style="padding:50px;">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -156,7 +158,7 @@
     <div class="container">
 
         <!-- About Section Heading -->
-        <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+        <h2 class="page-section-heading text-center text-uppercase text-white">Meet the Team</h2>
 
         <!-- Icon Divider -->
         <div class="divider-custom divider-light">
@@ -252,26 +254,27 @@
         <div class="divider-custom-line"></div>
       </div>
 
+      <a href="https://www.youtube.com/watch?v=V0rmrAqFquE&feature=youtu.be">
+          <h1>Demo Video</h1>
+      </a>
       <a href="PlanR-master.zip" download>
           <h1>Source Code Download</h1>
       </a>
       <a href="PlanR-b0afffc304ae433cb88b007fe0ef80dd-signed.apk.part" download>
           <h1>APK Download</h1>
       </a>
-      <a href="">
+      <a href="https://docs.google.com/document/d/10YVV3cP-GhEO3ftWQ28zX2z76DyhiFZuOWtnWkxinzs/edit">
           <h1>Project Backlog</h1>
       </a>
-      <a href="">
+      <a href="https://docs.google.com/document/d/1C6he2Hsxg4w8_P3OjUOtmDdHFmzsBheRkZK-1YqNDfY/edit">
           <h1>Sprint Planning Document</h1>
       </a>
-      <a href="">
+      <a href="https://docs.google.com/document/d/1OTcexCsBikNjCM_WVGRRGaIPpqPXu8URfHLXHoqOvmc/edit">
           <h1>Daily standup meeting notes</h1>
       </a>
       <a href="https://github.com/jaw653/PlanR">
           <h1>Github link</h1>
       </a>
-
-      <!-- FIXME: video here!!! -->
 
   </section>
 
