Added Test Locations
Test Locations

--- a/index.html
+++ b/index.html
@@ -275,6 +275,12 @@
       <a href="https://github.com/jaw653/PlanR">
           <h1>Github link</h1>
       </a>
+      <a href="https://github.com/jaw653/PlanR/tree/master/PlanR/test/edu/ua/crimson/planr">
+        <h1>Backend Unit Test and Test Cases</h1>
+    </a>
+    <a href="https://github.com/jaw653/PlanR/tree/master/PlanR_FrontEnd/test">
+      <h1>Front End Tests using Jest</h1>
+  </a>
 
   </section>
 
